--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@styled-icons/material-outlined": "^10.34.0",
-    "next": "11.0.1",
+    "next": "^11.1.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -38,8 +38,8 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-react-docgen": "^4.2.1",
     "babel-plugin-styled-components": "^1.13.2",
-    "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
